<resources>
    <string name="app_name">CalculatorArray</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Save</string>

    <string name="menu_home">Scientific Calculator</string>
    <string name="menu_gallery">Mortgage Calculator</string>
    <string name="menu_slideshow">Tax Calculator</string>
    <string name="menu_tools">Calculations</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="absolute">| x |</string>
    <string name="log">log</string>
    <string name="root">√</string>
    <string name="power">^</string>
    <string name="shift">shift</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="clear">clear</string>
</resources>
